# esp32-configurator

./: .dockerignore  .gitignore  CLAUDE.md  README.md  poetry.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
src/: __main__.py
src/models/: secrets.py
templates/: secrets.h
