[tool.poetry]
name = "esp32-configurator"
version = "1.1.0"
description = "ESP32 devices and sensors configurator"
authors = ["Stefano Cappa"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "3.1.5"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
