[tool.poetry]
name = "esp32-configurator"
version = "2.0.0"
description = "ESP32 devices and sensors configurator"
authors = ["Stefano Cappa"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.14"
jinja2 = "3.1.6"
pydantic = "^2.12.4"
pyyaml = "^6.0.3"
poetry = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
